# mididude

./: .gitignore  flake.nix
bitwig/: mididude.control.js
board/: .envrc
board/mididude/: Endless_potentiometer.kicad_sym  MCU_ch32v003_Board.kicad_sym  fp-lib-table  mididude.kicad_dru  mididude.kicad_pcb  mididude.kicad_prl  mididude.kicad_pro  mididude.kicad_sch  sym-lib-table
board/mididude/Endless_potentiometer.pretty/: Endless_potentiometer.kicad_mod
board/mididude/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
board/mididude/MCU_ch32v003_Board.pretty/: CH32FV003 F1772.kicad_mod
case/: case-Bottom.stl  case-Top.stl  case.3mf  case.FCStd
ch32/: .envrc  Cargo.toml
ch32/src/: i2c_device.rs
rp-pico/: .envrc  Cargo.toml
rp-pico/src/: main.rs
