[package]
name = "mididude-adc"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal", rev = "2b8e1c864ba5545ee65b1c77dcb17c86a471b70c", features = [
    "ch32v003f4p6",
    "memory-x",
    "rt",
] }
defmt = { version = "1.0.1" }

# This is okay because we should automatically use whatever ch32-hal uses
qingke = "*"
qingke-rt = { version = "*", features = ["highcode"] }


panic-halt = "1.0"

embedded-hal = "1.0.0"

display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
micromath = { version = "2.1.0", features = ["num-traits"] }

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "s" # Optimize for size.
panic = 'abort'

[profile.dev]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "s" # Optimize for size.
panic = 'abort'
